# PyNeoHtop

./: README.md  main.py  pyproject.toml  requirement.txt  test.py
.github/workflows/: build.yaml
monitoring/: __int__.py  process_monitor.py  system_monitor.py  type.py
static/: index.html  script.js  style.css
